--- a/contact.html
+++ b/contact.html
@@ -6,28 +6,9 @@
   </head>
   <body>
     <h1>Kontakt:</h1>
-    <em>Telefon: 8942878299</em>
+    <p><em>Telefon: 8942878299</em></p>
     <br>
-    <em>Email: richardaustin268@gmail.com</em>
-    <form class="" action="index.html" method="post">
-      <label>Your Name:</label>
-      <input type="text" name="" value="">
-      <input type="color" name="" value="" />
-      <br />
-      <p>
-        <label>Do you want to sign up?</label>
-        <input type="checkbox" name="" value="" />
-      </p>
-      <label>Password:</label>
-      <input type="password" name="" value-"" />
-      <input type="submit" name="">
-      <br />
-      <input type="date" name="" value="" />
-      <br />
-      <input type="range" name="" value="" max="10" min="0" />
-      <p>
-        <input type="file" name="" value="" />
-      </p>
-    </form>
+    <p><em>Email: richardaustin268@gmail.com</em></p>
+    <a href="contactform.html">Contact Form </a>
   </body>
 </html>
